--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/the-pizza-guy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;1,300&family=Borel&family=Inconsolata:wght@900&family=PT+Sans:wght@700&family=Roboto+Mono:wght@200;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>The Pizza Guy</title>
   </head>
   <body>
